@@ -1,6 +1,13 @@
-*** Jikes 1.18c is a work in progress, as of 29 December 2003.
+*** Jikes 1.19 was released ???.
 
-Incremental fixes over 1.18. FIXME: This list is not complete.
+The default -source and -target options are now 1.4 (that is, the
+assert statement now compiles by default); for the old behavior you
+must specify -source 1.3 or -target 1.3 at the command line.
+
+Constant instance variables are now initialized sooner, so that you
+cannot view their default 0 value even with reflection.
+
+FIXME: What other big changes have been added?
 
 *** Jikes 1.18 was released 21 November 2002.
 
@@ -13,6 +20,6 @@ Other minor bugs have been fixed.
 The regression with empty if-clauses was fixed.
 Inheritance issues and name shadowing were improved.
 Package handling was improved somewhat.
-Many other bugs were fixed. FIXME: This list is not complete.
+Many other bugs were fixed.
 
-FIXME: This file sould be updated appropriately.
+NEWS was not properly maintained in prior versions.
